--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,8 @@ numpy>=1.24.0
 
 # HTTP Client (for health checks)
 requests>=2.31.0
+
+# Testing (for CI/CD and local development)
+pytest>=7.4.0
+pytest-timeout>=2.2.0
+pytest-asyncio>=0.21.0
