--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -130,6 +130,11 @@ jobs:
           echo "SERVICE_URL=$SERVICE_URL" >> $GITHUB_OUTPUT
           echo "✅ Service deployed at: $SERVICE_URL"
 
+      - name: Install test dependencies for smoke tests
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest pytest-timeout requests
+
       - name: Run smoke tests on deployed service
         env:
           SERVICE_URL: ${{ steps.get-url.outputs.SERVICE_URL }}
